# gl-scene

./: README.md  gl-scene.cabal
src/: Scene.hs
src/Scene/: Callback.hs  Event.hs  Kernel.hs  Logger.hs  Runtime.hs  Scanner.hs  Scene.hs  Types.hs  Viewer.hs
src/Scene/GL/: Action.hs  Attribute.hs  Framebuffer.hs  Mesh.hs  Program.hs  Resource.hs  Setting.hs  Texture.hs  Types.hs  Uniform.hs
src/Scene/GL/Attribute/: VertexWithPos.hs  VertexWithPosNorm.hs  VertexWithPosNormTex.hs  VertexWithPosTex.hs
test/: KernelTests.hs  Main.hs  VertexTests.hs
