name:                gl-scene
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/gl-scene#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scene
  other-modules:       Scene.Callback
                       Scene.Kernel
                       Scene.Runtime
                       Scene.Scene
                       Scene.Types
                       Scene.Viewer
                       Scene.GL.Action
                       Scene.GL.Attribute
                       Scene.GL.Attribute.VertexWithPos
                       Scene.GL.Program
                       Scene.GL.Resource
                       Scene.GL.Types
                       Scene.GL.Uniform
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , deepseq
                     , fast-logger
                     , flow
                     , gl
                     , GLFW-b
                     , linear
                     , mtl
                     , stm
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/gl-scene
