name:                gl-scene
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/gl-scene#readme
license:             MIT
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Scene
                       Scene.GL.Attribute.VertexWithPos
                       Scene.GL.Attribute.VertexWithPosNorm
                       Scene.GL.Attribute.VertexWithPosTex
  other-modules:       Scene.Callback
                       Scene.Kernel
                       Scene.Logger
                       Scene.Runtime
                       Scene.Scanner
                       Scene.Scene
                       Scene.Types
                       Scene.Viewer
                       Scene.GL.Attribute
                       Scene.GL.Mesh
                       Scene.GL.Program
                       Scene.GL.Resource
                       Scene.GL.Setting
                       Scene.GL.Texture
                       Scene.GL.Types
                       Scene.GL.Uniform
  build-depends:       base >= 4.7 && < 5
                     , async
                     , bytestring
                     , deepseq
                     , fast-logger
                     , flow
                     , gl
                     , GLFW-b
                     , JuicyPixels
                     , JuicyPixels-extra
                     , linear
                     , mtl
                     , stm
                     , text
                     , unordered-containers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite gl-scene-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       VertexTests
                       KernelTests
  build-depends:       base >= 4.7 && < 5
                     , gl-scene
                     , HUnit
                     , linear
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded

source-repository head
  type:     git
  location: https://github.com/psandahl/gl-scene
